# RadField3DSimulation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
include/: Collisions.h  Geometry.hpp  GeometryLoader.hpp  ProbabilityFunctions.hpp  RadiationFieldDetector.hpp  RadiationSimulation.hpp  RadiationSimulationHandler.hpp  RadiationSource.hpp  Statistics.hpp  StatisticsHelpers.hpp  World.hpp
include/Geant4/: G4Geometry.hpp  G4PhysicsList.hpp  G4RadiationFieldDetector.hpp  G4RadiationSource.hpp  G4SceneConstructor.hpp  G4World.hpp
include/utils/: PCA.hpp  RollingBuffer.hpp
src/: Collisions.cpp  Geometry.cpp  GeometryLoader.cpp  PCA.cpp  ProbabilityFunctions.cpp  RadField3D.cpp  RadiationFieldDetector.cpp  RadiationSimulation.cpp  RadiationSimulationHandler.cpp  RadiationSource.cpp  Statistics.cpp  World.cpp
src/Geant4/: G4Geometry.cpp  G4RadiationFieldDetector.cpp  G4RadiationSource.cpp  G4SceneConstructor.cpp  G4World.cpp
targets/radfield3d/: RadField3D.cpp
targets/test/: CollisionTest.cpp  DetectorTest.cpp  HistogramStatisticsTest.cpp  LoadTest.cpp  PCADirectionTests.cpp  SourceDistributionTests.cpp  WorldTest.cpp
tools/: compare_fields.py  create_dataset.py  generate_spectra_dataset.py  test_dataset.py
tools/dataset/: spectra.py  tubes.py  tubes_module.py
tools/helpers/: __init__.py  crop_field.py  join_field.py  metadata_field.py  voxelization.py
tools/tests/: test_create_dataset.py
